fix height on mobiles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,12 +13,19 @@ body {
 }
 
 main {
-  height: 100vh;
-  height: -webkit-fill-available;
-  height: -moz-available;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: 'Questrial', sans-serif;
+  height: -webkit-fill-available;
+  height: -moz-available;
+  padding: 32px 0;
+}
+
+@media (min-width: 800px) {
+  main {
+    height: 100vh;
+    padding: 0;
+  }
 }
